# modivcare-rides-efficiency-

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
notebooks/: 01_eda_rides.ipynb  02_efficiency_index_dev.ipynb  03_routing_simulation_dev.ipynb  04_evaluation_results.ipynb  05_dashboard_deployment.ipynb
sql/: 00_schema.sql  01_efficiency_scoring.sql  02_routing_analysis.sql
src/: __init__.py  config.py  data_cleaning.py  data_generation.py  efficiency_scoring.py  evaluation.py  feature_engineering.py  routing_simulation.py  utils.py
tests/: test_efficiency_scoring.py  test_routing_simulation.py
